[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinearity_studies"
version = "0.1.0"
description = "Analysis tools for detector nonlinearity studies using FITS data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Abby Chriss"},
]
keywords = ["physics", "detector", "FITS", "analysis", "nonlinearity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "scipy>=1.5.0",
    "astropy>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.scripts]
run-nonlinearity-studies = "nonlinearity_studies.run_nonlinearity_studies:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonlinearity_studies*"]
